--- a/index.ipynb
+++ b/index.ipynb
@@ -31,7 +31,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# mean - 18\n",
+    "# median - 18\n",
+    "# mode - 18\n",
+    "# all three measures are equal"
    ]
   },
   {
@@ -52,7 +55,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# mean - 94.25\n",
+    "# median - 96.5\n",
+    "# mode - none\n",
+    "# the mean and median are close in value but there is no mode"
    ]
   },
   {
@@ -69,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# 19"
    ]
   },
   {
@@ -96,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# 8"
    ]
   },
   {
@@ -112,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# 50% of boys vs 22% of girls"
    ]
   },
   {
@@ -128,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# 0.75 - 1.0 hours/day"
    ]
   },
   {
@@ -144,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# the usage habits of girls varies more wildly than that of boys and on average girls spend more time on Facebook"
    ]
   }
  ],
@@ -164,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
